--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -728,6 +728,8 @@ a:hover {
         max-height: $spacing-unit*6;
     }
 }
+.projects-campaigns .breadcrumbs-length-0,
+.services .breadcrumbs-length-0,
 .digital.participation.projects .page-info,
 .blogs .page-sidebar .page-info,
 .press-media .sidebar h3.blogs {
