--- a/functions/test-db/json2/scvo/templates/members.hbs
+++ b/functions/test-db/json2/scvo/templates/members.hbs
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <ul class="breadcrumbs">
             <li><a href="/">SCVO</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/about">About SCVO</a></li>
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid">
@@ -26,7 +26,7 @@
                         <p>[Search filters TBC]</p>
 
                         {{#with primaryResponse.hits.hits.[0]._source}}
-                        {{{rendered.full}}}
+                        {{{rendered.list}}}
                         {{/with}}
                     </div>
                     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar page-sidebar">
