--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -1,4 +1,4 @@
-<div class="splash-image {{> header_splash}}">
+<div class="splash-image hello {{> header_splash}}">
     <div class="container-fluid">
         <div class="mdc-layout-grid">
             <h1 class="header-text">
@@ -39,7 +39,7 @@
     </div>
 </section>
 
-<section class="cta-content splash-image">
+<section class="splash-image cta-content">
     <div class="container-fluid">
         <div class="cta-grid mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
