--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -195,8 +195,10 @@ a:hover {
 .mdc-button:before {
     background-color: var(--mdc-theme-primary-fade);
 }
-.mdc-button:not(.mdc-ripple-upgraded):active:after, .mdc-button:not(.mdc-ripple-upgraded):focus:before, .mdc-button:not(.mdc-ripple-upgraded):hover:before {
-    opacity: 0.2;
+.mdc-button:not(.mdc-ripple-upgraded):active:after,
+.mdc-button:not(.mdc-ripple-upgraded):focus:before,
+.mdc-button:not(.mdc-ripple-upgraded):hover:before {
+    opacity: 0.1;
 }
 
 .home {
@@ -717,16 +719,19 @@ a:hover {
     // }
 }
 .home {
-    .splash-image {
+    .splash-image.hello {
         padding: $spacing-unit*3 0;
-        height: 300px;
-        .mdc-layout-grid {
-            margin-left: 5%;
-            width: 39%;
-        }
-        h1.header-text {
-            font-size: 5rem;
-            line-height: 4rem;
+        min-height: 330px;
+        .container-fluid {
+            overflow: visible;
+            .mdc-layout-grid {
+                margin-left: 5%;
+                width: 39%;
+                h1.header-text {
+                    font-size: 5rem;
+                    line-height: 4rem;
+                }
+            }
         }
     }
 }
@@ -1397,6 +1402,17 @@ footer {
     }
     .mdc-toolbar-fixed-adjust {
         padding-top: $spacing-unit*8.5;
+    }
+    .mdc-toolbar .mdc-toolbar__row .container-fluid #upper-tab-bar {
+        margin-right: 0;
+    }
+    .mdc-toolbar .mdc-toolbar__row .container-fluid .mdc-tab-bar .mdc-tab {
+        padding: 0 $spacing-unit/2;
+    }
+    .home .latest-content .gist img.photo-wee,
+    .gist .thumbnail img {
+        height: 50px;
+        width: 50px;
     }
 }
 
