--- a/functions/test-db/json2/scvo/partials/breadcrumbs-posts.hbs
+++ b/functions/test-db/json2/scvo/partials/breadcrumbs-posts.hbs
@@ -1,5 +1,5 @@
 <!-- <ul class="breadcrumbs">
-    <li><a href="/">SCVO</a></li>
+    <li><a href="/">Home</a></li>
     <li>
         <a href="/blogs">Blogs</a> /
         <a href="/press-media">Press releases</a> /
