--- a/functions/test-db/json2/scvo/partials/breadcrumbs.hbs
+++ b/functions/test-db/json2/scvo/partials/breadcrumbs.hbs
@@ -1,6 +1,6 @@
 {{#with primaryResponse.hits.hits.[0]._source}}
 <ul class="breadcrumbs breadcrumbs-length-{{breadcrumb.length}}">
-    <li><a href="/">SCVO</a></li>
+    <li><a href="/">Home</a></li>
     {{#each breadcrumb}}
     <li>
         <a href="{{replace url 'https://cms.scvo.org' ''}}">{{{striptags title}}}</a>
