--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -97,6 +97,7 @@ $nav-height: 2.5rem;
     --mdc-theme-primary-light: #6FB744;
     --mdc-theme-primary-dark: #6FB744;
 }
+.breadcrumbs,
 .page-content,
 .home .cta-content,
 .home .latest-content,
@@ -1043,7 +1044,7 @@ ul.breadcrumbs {
     height: $nav-height;
     line-height: $nav-height;
     list-style: none;
-    border-bottom: 1px solid var(--mdc-theme-primary-fade);
+    border-bottom: 1px solid rgba(0,0,0,.2);
     li {
         display: inline-block;
         margin: 0;
@@ -1058,7 +1059,7 @@ ul.breadcrumbs {
         content: "\203A" !important;
         font-weight: 800;
         margin-right: $spacing-unit/4;
-        width: $spacing-unit/2;
+        width: $spacing-unit;
         display: inline-block;
         padding: 0;
         // color: white;
