--- a/functions/test-db/json2/scvo/templates/event-booking.hbs
+++ b/functions/test-db/json2/scvo/templates/event-booking.hbs
@@ -17,7 +17,7 @@
     {{#with primaryResponse.hits.hits.[0]._source}}
     <div class="container-fluid">
         <ul class="breadcrumbs">
-            <li><a href="/">SCVO</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/services">Services</a></li>
             <li><a href="/services/events">Events</a></li>
             <li><a href="/services/events/{{slug}}">{{{title}}}</a></li>
