--- a/functions/test-db/json2/scvo/templates/event.hbs
+++ b/functions/test-db/json2/scvo/templates/event.hbs
@@ -16,7 +16,7 @@
     </div>
     <div class="container-fluid">
         <ul class="breadcrumbs">
-            <li><a href="/">SCVO</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/services">Services</a></li>
             <li><a href="/services/events">Events</a></li>
         </ul>
