--- a/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
@@ -16,7 +16,7 @@
     </div>
     <div class="container-fluid">
         <ul class="breadcrumbs">
-            <li><a href="/">SCVO</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/policy-research">Policy &amp; research</a></li>
         </ul>
         <div class="mdc-layout-grid">
