--- a/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
@@ -15,7 +15,7 @@
     </div>
     <div class="container-fluid">
         <ul class="breadcrumbs">
-            <li><a href="/">SCVO</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/digital">Digital</a></li>
             <li><a href="/digital/participation">Participation</a></li>
         </ul>
