--- a/functions/test-db/json2/scvo/templates/grant-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-digital.hbs
@@ -16,7 +16,7 @@
     </div>
     <div class="container-fluid">
         <ul class="breadcrumbs">
-            <li><a href="/">SCVO</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/digital">Digital</a></li>
             <li><a href="/digital/participation">Participation</a></li>
             <li><a href="/digital/participation/projects">Projects</a></li>
