--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -306,6 +306,10 @@ a:hover {
         font-weight: 400;
     }
 }
+.post-related {
+    padding-top: $spacing-unit*1.5;
+    border-top: 1px solid rgba(0,0,0,.2);
+}
 
 .hero {
     display: -webkit-box;
@@ -611,7 +615,7 @@ a:hover {
 
 .action-buttons-right {
     flex-direction: row-reverse;
-    border-top: 1px solid #dddddd;
+    border-top: 1px solid rgba(0,0,0,.2);
 }
 
 .setting-up-a-charity .footer-image {
@@ -1035,7 +1039,7 @@ hr {
     height: 1px;
     background-color: white;
     border: none;
-    border-bottom: 1px solid var(--mdc-theme-primary-fade);
+    border-bottom: 1px solid rgba(0,0,0,.2);
 }
 
 ul.breadcrumbs {
@@ -1221,7 +1225,7 @@ p:last-child {
     }
     .post-info {
         margin: $spacing-unit/2 0 $spacing-unit*1.5;
-        border-bottom: 1px solid var(--mdc-theme-primary-fade);
+        border-bottom: 1px solid rgba(0,0,0,.2);
         padding: 0 0 $spacing-unit;
     }
     .page-info {
@@ -1229,7 +1233,7 @@ p:last-child {
         color: #777;
         .page-info-updated {
             margin: $spacing-unit*1.5 0 $spacing-unit/2;
-            border-top: 1px solid #aaa;
+            border-top: 1px solid rgba(0,0,0,.2);
             padding: $spacing-unit 0 0;
             font-size: 95%;
         }
