--- a/functions/test-db/json2/scvo/partials/breadcrumbs.hbs
+++ b/functions/test-db/json2/scvo/partials/breadcrumbs.hbs
@@ -2,9 +2,7 @@
 <ul class="breadcrumbs breadcrumbs-length-{{breadcrumb.length}}">
     <li><a href="/">Home</a></li>
     {{#each breadcrumb}}
-    <li>
-        <a href="{{replace url 'https://cms.scvo.org' ''}}">{{{striptags title}}}</a>
-    </li>
+    <li><a href="{{replace url 'https://cms.scvo.org' ''}}">{{{striptags title}}}</a></li>
     {{/each}}
 </ul>
 {{/with}}
