--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -13,9 +13,10 @@ $nav-height: 2.5rem;
     --mdc-theme-secondary-light: #FFA000; // Amber 700
     --mdc-theme-secondary-dark: #FF6F00; // Amber 900
     --mdc-theme-background: #ECEFF1; // Blue Grey 50
-    --mdc-footer-primary: #4A148C; // Purple 900
-    --mdc-footer-primary-light: #D81B60; // Pink 600
-    --mdc-footer-primary-dark: #290b4d;
+    --mdc-footer-primary: #371448;
+    --mdc-footer-primary-highlight: #B3185B;
+    --mdc-footer-primary-light: #592864;
+    --mdc-footer-primary-dark: #251032;
     --mdc-site-background: #290b4d; // was #263238 Blue Grey 900
     --mdc-layout-grid-margin-desktop: 0;
     --mdc-layout-grid-margin-tablet: 0;
@@ -219,7 +220,7 @@ a:hover {
             }
         }
     }
-    .cta-content.splash-image {
+    .cta-content.callout-image {
         background-image: linear-gradient(var(--mdc-theme-primary-fade),var(--mdc-theme-primary-fade)),url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/Drake-Music-03.jpg');
         height: auto;
         padding: $spacing-unit 0 $spacing-unit*3.25;
@@ -1362,7 +1363,7 @@ p:last-child {
 footer {
     color: white;
     background-color: var(--mdc-footer-primary);
-    border-top: 0.6rem solid var(--mdc-footer-primary-light);
+    border-top: 0.6rem solid var(--mdc-footer-primary-highlight);
     .footer-main {
         padding: $spacing-unit*2.5 0 $spacing-unit*2;
     }
