--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -39,7 +39,7 @@
     </div>
 </section>
 
-<section class="splash-image cta-content">
+<section class="callout-image cta-content">
     <div class="container-fluid">
         <div class="cta-grid mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
