Home page improvements

--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -12,7 +12,7 @@
                 voluntary organisations &amp; Social Enterprises
             </p>
             <p>
-                <a href="/about" class="mdc-button mdc-button--raised">Read more</a>
+                <a href="/about" class="mdc-button">Find out more</a>
             </p>
         </div>
     </div>
