--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -205,6 +205,11 @@ a:hover {
 }
 
 .home {
+    .splash-image {
+        .mdc-button {
+            background: white;
+        }
+    }
     .featured-content {
         .featured.mdc-card {
             height: 20rem;
@@ -624,14 +629,6 @@ a:hover {
     .mdc-layout-grid {
         margin-top: $spacing-unit;
     }
-    .mdc-button {
-        color: var(--mdc-theme-primary);
-        background: white;
-        border: 2px solid var(--mdc-theme-primary);
-        margin-top: $spacing-unit;
-        text-transform: none;
-        background: transparent;
-    }
     .footer-image {
         position: relative;
         background-size: cover;
@@ -1026,6 +1023,22 @@ h1.mdc-typography--title {
             padding-right: 0.95rem;
             position: relative;
             top: 0em;
+        }
+    }
+    .mdc-button {
+        color: var(--mdc-theme-primary);
+        background: white;
+        border: 2px solid var(--mdc-theme-primary);
+        margin-top: $spacing-unit;
+        text-transform: none;
+        background: transparent;
+    }
+    .menu-sidebar,
+    .mdc-card {
+        .mdc-button {
+            color: white;
+            margin-top: 0;
+            background: var(--mdc-theme-primary);
         }
     }
     .mdc-card__actions ul,
@@ -1501,6 +1514,18 @@ footer {
 @media screen and (max-width: 450px) {
     .pagination-distance-4 {
         display: none !important;
+    }
+    .home .splash-image.hello {
+        background-image: linear-gradient(var(--mdc-theme-primary-fade), var(--mdc-theme-primary-fade)) !important;
+        padding: 0;
+        .container-fluid .mdc-layout-grid {
+            width: 100%;
+            margin: 0;
+            h1.header-text {
+                font-size: 3rem;
+                line-height: 3.3rem;
+            }
+        }
     }
 }
 
