--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -86,7 +86,7 @@
                     </header>
                     <nav class="mdc-temporary-drawer__content mdc-list-group">
                         <div id="icon-with-text-demo" class="mdc-list">
-                            <a class="mdc-tab" href="/">Home</a>
+                            <a class="mdc-list-item" href="/">Home</a>
                             {{#each menus.main}}
                             <a class="mdc-list-item" href="{{path}}" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">
                                 {{{label}}}
@@ -133,7 +133,6 @@
                                     <ul class="mdc-list">
                                         <li class="mdc-list-item">
                                             <a href="mailto:enquiries@scvo.org.uk">
-
                                                 enquiries@scvo.org.uk
                                             </a>
                                         </li>
