--- a/functions/test-db/json2/scvo/templates/page-full-width.hbs
+++ b/functions/test-db/json2/scvo/templates/page-full-width.hbs
@@ -16,12 +16,8 @@
     </div>
     <div class="container-fluid">
         {{> breadcrumbs}}
-        <div class="mdc-layout-grid equal-height">
-            <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content page-content">
-                    {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
-                </div>
-            </div>
+        <div class="content page-content">
+            {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
         </div>
     </div>
 </div>
