--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -1,19 +1,21 @@
-<div class="splash-image hello {{> header_splash}}">
-    <div class="container-fluid">
-        <div class="mdc-layout-grid">
-            <h1 class="header-text">
-                <span class="header-text-banner">
-                    Hello,<br />
-                    we're SCVO
-                </span>
-            </h1>
-            <p class="header-extra">
-                Championing Scotland's vibrant charities,<br />
-                voluntary organisations &amp; Social Enterprises
-            </p>
-            <p>
-                <a href="/about" class="mdc-button">Find out more</a>
-            </p>
+<div class="splash-image hello" style="{{> header_splash_image}}">
+    <div class="splash-overlay" style="{{> header_splash_overlay}}">
+        <div class="container-fluid">
+            <div class="mdc-layout-grid">
+                <h1 class="header-text">
+                    <span class="header-text-banner">
+                        Hello,<br />
+                        we're SCVO
+                    </span>
+                </h1>
+                <p class="header-extra">
+                    Championing Scotland's vibrant charities,<br />
+                    voluntary organisations &amp; Social Enterprises
+                </p>
+                <p>
+                    <a href="/about" class="mdc-button">Find out more</a>
+                </p>
+            </div>
         </div>
     </div>
 </div>
