--- a/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
@@ -1,16 +1,18 @@
 <div class="library library-search">
-    <div class="splash-image {{> header_splash}}">
-        <div class="container-fluid">
-            <div class="mdc-layout-grid">
-                {{#if primaryResponse.hits.hits.[0]._source.header_text}}
-                <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
-                {{else}}
-                <h1 class="header-text">
-                    <span class="header-text-banner">
-                        Evidence Library
-                    </span>
-                </h1>
-                {{/if}}
+    <div class="splash-image splash-image-{{primaryResponse.hits.hits.[0]._type}}" style="{{> header_splash_image}}">
+        <div class="splash-overlay" style="{{> header_splash_overlay}}">
+            <div class="container-fluid">
+                <div class="mdc-layout-grid">
+                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                    <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
+                    {{else}}
+                    <h1 class="header-text">
+                        <span class="header-text-banner">
+                            Evidence Library
+                        </span>
+                    </h1>
+                    {{/if}}
+                </div>
             </div>
         </div>
     </div>
