--- a/functions/test-db/json2/scvo/templates/grant-charter-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-charter-search.hbs
@@ -1,15 +1,17 @@
-<div class="grant-digital-search">
-    <div class="splash-image {{> header_splash}}">
-        <div class="container-fluid">
-            <div class="mdc-layout-grid">
-                {{#if primaryResponse.hits.hits.[0]._source.header_text}}
-                <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}"
-                    class="header-text" /> {{else}}
-                <h1 class="header-text">
-                    <span class="header-text-banner">
-                        {{{supplimentaryResponses.page.hits.hits.[0]._source.title}}}
-                    </span>
-                </h1> {{/if}}
+<div class="grant-charter-search">
+    <div class="splash-image splash-image-{{primaryResponse.hits.hits.[0]._type}}" style="{{> header_splash_image}}">
+        <div class="splash-overlay" style="{{> header_splash_overlay}}">
+            <div class="container-fluid">
+                <div class="mdc-layout-grid">
+                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                    <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}"
+                        class="header-text" /> {{else}}
+                    <h1 class="header-text">
+                        <span class="header-text-banner">
+                            {{{supplimentaryResponses.page.hits.hits.[0]._source.title}}}
+                        </span>
+                    </h1> {{/if}}
+                </div>
             </div>
         </div>
     </div>
@@ -29,13 +31,13 @@
 
                     <form [searchroute]="'grant_search'">
                         <div class="mdc-textfield mdc-textfield--upgraded">
-                            <input type="text" class="mdc-textfield__input" name="q" id="grant-digital-keywords"
+                            <input type="text" class="mdc-textfield__input" name="q" id="grant-charter-keywords"
                                 value="{{params.query.q}}">
-                            <label class="mdc-textfield__label" for="grant-digital-keywords">Keywords</label>
+                            <label class="mdc-textfield__label" for="grant-charter-keywords">Keywords</label>
                             <div class="mdc-textfield__bottom-line"></div>
                         </div>
                         <div class="mdc-form-field">
-                            <select class="mdc-select" role="listbox" id="grant-digital-call" name="call">
+                            <select class="mdc-select" role="listbox" id="grant-charter-call" name="call">
                                 <option value="" {{#if params.query.call}}{{else}}selected{{/if}}>All funding rounds</option>
                                 {{#each supplimentaryResponses.types.aggregations.calls.buckets}}
                                 <option value="{{slugify key}}" {{#compare ../params.query.call "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
@@ -43,7 +45,7 @@
                             </select>
                         </div>
                         <div class="mdc-form-field">
-                            <select class="mdc-select" role="listbox" id="grant-digital-tag" name="tag">
+                            <select class="mdc-select" role="listbox" id="grant-charter-tag" name="tag">
                                 <option value="" {{#if params.query.tag}}{{else}}selected{{/if}}>All tags</option>
                                 {{#each supplimentaryResponses.types.aggregations.tags.buckets}}
                                 <option value="{{slugify key}}" {{#compare ../params.query.tag "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
