--- a/functions/test-db/json2/scvo/templates/setting-up-a-charity.hbs
+++ b/functions/test-db/json2/scvo/templates/setting-up-a-charity.hbs
@@ -1,20 +1,22 @@
 <div class="page">
-    <div class="splash-image {{> header_splash}}">
-        <div class="container-fluid">
-            <div class="mdc-layout-grid">
-                {{#if primaryResponse.hits.hits.[0]._source.header_text}}
-                <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
-                {{else}}
-                <h1 class="header-text">
-                    <span class="header-text-banner">
-                        {{#if primaryResponse.hits.hits.[0]}}
-                        {{{primaryResponse.hits.hits.[0]._source.title}}}
-                        {{else}}
-                        404: Not found
-                        {{/if}}
-                    </span>
-                </h1>
-                {{/if}}
+    <div class="splash-image" style="{{> header_splash_image}}">
+        <div class="splash-overlay" style="{{> header_splash_overlay}}">
+            <div class="container-fluid">
+                <div class="mdc-layout-grid">
+                    {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                    <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
+                    {{else}}
+                    <h1 class="header-text">
+                        <span class="header-text-banner">
+                            {{#if primaryResponse.hits.hits.[0]}}
+                            {{{primaryResponse.hits.hits.[0]._source.title}}}
+                            {{else}}
+                            404: Not found
+                            {{/if}}
+                        </span>
+                    </h1>
+                    {{/if}}
+                </div>
             </div>
         </div>
     </div>
