Styling improvements for home

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -662,6 +662,11 @@ a:hover {
     .mdc-card__title {
         color: white;
     }
+    .mdc-card .mdc-button {
+        border: 2px solid white;
+        background: transparent;
+        color: white;
+    }
 }
 .splash-overlay,
 .splash-image {
@@ -737,10 +742,10 @@ a:hover {
     // }
 }
 .home {
-    .splash-overlay.hello,
+    .splash-image.hello .splash-overlay,
     .splash-image.hello {
-        padding: $spacing-unit*3 0;
-        min-height: 330px;
+        height: 40vh;
+        min-height: 300px;
     }
     .splash-image.hello {
         .container-fluid {
@@ -1537,8 +1542,8 @@ footer {
     .pagination-distance-4 {
         display: none !important;
     }
-    .splash-image {
-        background-image: linear-gradient(66deg, var(--mdc-theme-primary-dark), var(--mdc-theme-primary)) !important;
+    .splash-overlay {
+        background-image: linear-gradient(66deg, var(--mdc-theme-primary-fade), var(--mdc-theme-primary-fade)) !important;
         h1.header-text {
             font-size: 2rem;
             line-height: 2.2rem;
