--- a/functions/test-db/json2/scvo/templates/grant-charter.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-charter.hbs
@@ -20,8 +20,8 @@
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/digital">Digital</a></li>
-            <li><a href="/digital/participation">Participation</a></li>
-            <li><a href="/digital/participation/projects">Projects</a></li>
+            <li><a href="/digital/charter-fund">Charter Fund</a></li>
+            <li><a href="/digital/charter-fund/projects">Projects</a></li>
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
