--- a/functions/test-db/json2/scvo/templates/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/post-author.hbs
@@ -1,5 +1,5 @@
 <div class="post post-author">
-    <div class="splash-image" style="{{> header_splash_image}}">
+    <div class="splash-image splash-image-{{primaryResponse.hits.hits.[0]._type}}" style="{{> header_splash_image}}">
         <div class="splash-overlay" style="{{> header_splash_overlay}}">
             <div class="container-fluid">
                 <div class="mdc-layout-grid">
