--- a/functions/test-db/json2/scvo/templates/grant-charter-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-charter-search.hbs
@@ -19,12 +19,13 @@
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/digital">Digital</a></li>
-            <li><a href="/digital/participation">Participation</a></li>
+            <li><a href="/digital/charter-fund">Charter Fund</a></li>
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 content grant-content">
-                    {{#with supplimentaryResponses.page.hits.hits.[0]._source}} {{{rendered.full}}}
+                    {{#with supplimentaryResponses.page.hits.hits.[0]._source}}
+                    {{{rendered.full}}}
                     {{/with}}
 
                     <hr />
