Added cyber projects

--- a/functions/test-db/json2/scvo/templates/grant-cyber.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-cyber.hbs
@@ -1,4 +1,4 @@
-<div class="grant-charter">
+<div class="grant-cyber">
     <div class="splash-image splash-image-{{primaryResponse.hits.hits.[0]._type}}" style="{{> header_splash_image}}">
         <div class="splash-overlay" style="{{> header_splash_overlay}}">
             <div class="container-fluid">
@@ -20,8 +20,8 @@
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/digital">Digital</a></li>
-            <li><a href="/digital/charter-fund">Charter fund</a></li>
-            <li><a href="/digital/charter-fund/projects">Projects</a></li>
+            <li><a href="/digital/cyber-resilience">Cyber Resilience</a></li>
+            <li><a href="/digital/cyber-resilience/projects">Projects</a></li>
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
