--- a/functions/test-db/json2/scvo/templates/grant-cyber-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-cyber-search.hbs
@@ -1,4 +1,4 @@
-<div class="grant-charter-search">
+<div class="grant-cyber-search">
     <div class="splash-image splash-image-{{primaryResponse.hits.hits.[0]._type}}" style="{{> header_splash_image}}">
         <div class="splash-overlay" style="{{> header_splash_overlay}}">
             <div class="container-fluid">
@@ -19,7 +19,7 @@
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/digital">Digital</a></li>
-            <li><a href="/digital/charter-fund">Charter fund</a></li>
+            <li><a href="/digital/cyber-resilience">Cyber Resilience</a></li>
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
@@ -32,13 +32,13 @@
 
                     <form [searchroute]="'grant_search'">
                         <div class="mdc-textfield mdc-textfield--upgraded">
-                            <input type="text" class="mdc-textfield__input" name="q" id="grant-charter-keywords"
+                            <input type="text" class="mdc-textfield__input" name="q" id="grant-cyber-keywords"
                                 value="{{params.query.q}}">
-                            <label class="mdc-textfield__label" for="grant-charter-keywords">Keywords</label>
+                            <label class="mdc-textfield__label" for="grant-cyber-keywords">Keywords</label>
                             <div class="mdc-textfield__bottom-line"></div>
                         </div>
-                        <div class="mdc-form-field">
-                            <select class="mdc-select" role="listbox" id="grant-charter-call" name="call">
+                        <!-- <div class="mdc-form-field">
+                            <select class="mdc-select" role="listbox" id="grant-cyber-call" name="call">
                                 <option value="" {{#if params.query.call}}{{else}}selected{{/if}}>All funding rounds</option>
                                 {{#each supplimentaryResponses.types.aggregations.calls.buckets}}
                                 <option value="{{slugify key}}" {{#compare ../params.query.call "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
@@ -46,13 +46,13 @@
                             </select>
                         </div>
                         <div class="mdc-form-field">
-                            <select class="mdc-select" role="listbox" id="grant-charter-tag" name="tag">
+                            <select class="mdc-select" role="listbox" id="grant-cyber-tag" name="tag">
                                 <option value="" {{#if params.query.tag}}{{else}}selected{{/if}}>All tags</option>
                                 {{#each supplimentaryResponses.types.aggregations.tags.buckets}}
                                 <option value="{{slugify key}}" {{#compare ../params.query.tag "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
                                 {{/each}}
                             </select>
-                        </div>
+                        </div> -->
                         <button class="mdc-button mdc-button--raised" type="submit">
                             Search
                         </button>
