--- a/functions/test-db/json2/scvo/templates/grant-cyber-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-cyber-search.hbs
@@ -30,14 +30,14 @@
 
                     <hr />
 
-                    <form [searchroute]="'grant_search'">
+                    <!-- <form [searchroute]="'grant_search'">
                         <div class="mdc-textfield mdc-textfield--upgraded">
                             <input type="text" class="mdc-textfield__input" name="q" id="grant-cyber-keywords"
                                 value="{{params.query.q}}">
                             <label class="mdc-textfield__label" for="grant-cyber-keywords">Keywords</label>
                             <div class="mdc-textfield__bottom-line"></div>
                         </div>
-                        <!-- <div class="mdc-form-field">
+                        <div class="mdc-form-field">
                             <select class="mdc-select" role="listbox" id="grant-cyber-call" name="call">
                                 <option value="" {{#if params.query.call}}{{else}}selected{{/if}}>All funding rounds</option>
                                 {{#each supplimentaryResponses.types.aggregations.calls.buckets}}
@@ -52,13 +52,13 @@
                                 <option value="{{slugify key}}" {{#compare ../params.query.tag "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
                                 {{/each}}
                             </select>
-                        </div> -->
+                        </div>
                         <button class="mdc-button mdc-button--raised" type="submit">
                             Search
                         </button>
                     </form>
 
-                    <hr />
+                    <hr /> -->
 
                     <div class="mdc-layout-grid equal-height">
                         <div class="mdc-layout-grid__inner">
