--- a/functions/test-db/json2/scvo/templates/post.hbs
+++ b/functions/test-db/json2/scvo/templates/post.hbs
@@ -63,7 +63,8 @@
                     {{/if}}
                 </div>
                 {{#compare supplimentaryResponses.tfn_related_posts.hits.total ">" 0}}
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related post-related">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related post-related post-related-tfn">
+                    <h3>Related articles on <a href="http://thirdforcenews.org.uk">Third Force News</a></h3>
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
                             {{#each supplimentaryResponses.tfn_related_posts.hits.hits}}
